feat: add utils func

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -51,7 +51,7 @@
         "usingComponents":true,
         "appid": "",
         "setting" : {
-        	"urlCheck" : true
+        	"urlCheck" : false
         }
     },
     "mp-alipay" : {
