--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,7 +49,7 @@
     },
     "mp-weixin": { /* 小程序特有相关 */
         "usingComponents":true,
-        "appid": "",
+        "appid": "wxebfc3cb67909ff74",
         "setting" : {
         	"urlCheck" : false
         }
