--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "html-loader": "^1.3.2",
     "jest": "^25.4.0",
+    "markdown-loader": "^6.0.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
